--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Field & Feast</title>
         <link rel="stylesheet" href="style.css" />
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" />
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet"/>
     </head>
 
     <body> 
@@ -56,10 +56,7 @@
                     <li>
                       <img 
                         src="images/tomatoes-300w.jpg"
-                        srcset="
-                          images/tomatoes-200w.jpg 200w,
-                          images/tomatoes-300w.jpg 300w,
-                          images/tomatoes-600w.jpg 600w"
+                        srcset="images/tomatoes-200w.jpg 200w,images/tomatoes-300w.jpg 300w,images/tomatoes-600w.jpg 600w"
                         sizes="(max-width: 600px) 100vw, 600px"
                         alt="Heirloom tomatoes at peak ripeness."/>
                     </li>
@@ -89,7 +86,7 @@
                         srcset="
                           images/chef-plating-200w.jpg 200w,
                           images/chef-plating-300w.jpg 300w,
-                          images/chef-plating-600w.jpg 600"
+                          images/chef-plating-600w.jpg 600w"
                         sizes="(max-width: 600px) 100vw, 600px"
                         alt="Artful plating with seasonal ingredients."/>
                     </li>
