--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
             <section id="offerings">
                 <h2>Our Offerings</h2>
 
+
+                <div class="offering-card">
                 <h3>Artisan Provisions</h3>
                 <p>Hand-selected, seasonal ingredients sourced from our estate farm and trusted local growers. Each item is chosen for its freshness, flavor, and integrity.</p>
+                </div>
 
+                <div class="offering-card">
                 <h3>Exclusive Dining Experiences</h3>
                 <p>Join us for intimate chef-led tastings and farm-to-table feasts, where carefully crafted menus highlight the best of the season.</p>
+                </div>
 
+                <div class="offering-card">
                 <h3>The Field & Feast Monthly Basket</h3>
                 <p>Experience a curated selection of premium seasonal ingredients delivered to your doorstep each month.</p>
                 <ul>
@@ -46,6 +52,7 @@
                     <li>Exclusive Recipes & Pairings: Thoughtfully designed by our chefs to inspire culinary creativity.</li>
                 </ul>
                 <p>Elevate your home dining with the finest farm-to-table offerings, elegantly packaged and delivered with care.</p>
+                </div>
             </section>
 
             <section id="gallery">
@@ -54,13 +61,17 @@
 
                 <ul>
                     <li>
+                        <figure>
                       <img 
                         src="images/tomatoes-300w.jpg"
                         srcset="images/tomatoes-200w.jpg 200w,images/tomatoes-300w.jpg 300w,images/tomatoes-600w.jpg 600w"
                         sizes="(max-width: 600px) 100vw, 600px"
                         alt="Heirloom tomatoes at peak ripeness."/>
+                        <figcaption>Heirloom tomatoes at peak ripeness.</figcaption>
+                        </figure>
                     </li>
                     <li>
+                        <figure>
                       <img 
                         src="images/olive-oil-300w.jpg"
                         srcset="
@@ -69,8 +80,11 @@
                           images/olive-oil-600w.jpg 600w"
                         sizes="(max-width: 600px) 100vw, 600px"
                         alt="Drizzling golden olive oil over fresh harvest."/>
+                        <figcaption>Drizzling golden olive oil over fresh harvest.</figcaption>
+                        </figure>
                     </li>
                     <li>
+                        <figure>
                       <img 
                         src="images/table-setting-300w.jpg"
                         srcset="
@@ -79,8 +93,11 @@
                           images/table-setting-600w.jpg 600w"
                         sizes="(max-width: 600px) 100vw, 600px"
                         alt="Elegant tablescape under the evening sky."/>
+                        <figcaption>Elegant tablescape under the evening sky.</figcaption>
+                        </figure>
                     </li>
                     <li>
+                        <figure>
                       <img 
                         src="images/chef-plating-300w.jpg"
                         srcset="
@@ -89,8 +106,11 @@
                           images/chef-plating-600w.jpg 600w"
                         sizes="(max-width: 600px) 100vw, 600px"
                         alt="Artful plating with seasonal ingredients."/>
+                        <figcaption>Artful plating with seasonal ingredients</figcaption>
+                        </figure>
                     </li>
                     <li>
+                        <figure>
                       <img 
                         src="images/basket-300w.jpg"
                         srcset="
@@ -99,6 +119,8 @@
                           images/basket-600w.jpg 600w"
                         sizes="(max-width: 600px) 100vw, 600px"
                         alt="Our monthly basket, curated with care."/>
+                        <figcaption>Our monthly basket, curated with care.</figcaption>
+                        </figure>
                     </li>
                   </ul>
                   <p>View Our Full Gallery</p>
