--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
                 <ul>
                     <li>
-                        <figure>
+                        <figure class="gallery-card">
                       <img 
                         src="images/tomatoes-300w.jpg"
                         srcset="images/tomatoes-200w.jpg 200w,images/tomatoes-300w.jpg 300w,images/tomatoes-600w.jpg 600w"
@@ -71,7 +71,7 @@
                         </figure>
                     </li>
                     <li>
-                        <figure>
+                        <figure class="gallery-card">
                       <img 
                         src="images/olive-oil-300w.jpg"
                         srcset="
@@ -84,7 +84,7 @@
                         </figure>
                     </li>
                     <li>
-                        <figure>
+                        <figure class="gallery-card">
                       <img 
                         src="images/table-setting-300w.jpg"
                         srcset="
@@ -97,7 +97,7 @@
                         </figure>
                     </li>
                     <li>
-                        <figure>
+                        <figure class="gallery-card">
                       <img 
                         src="images/chef-plating-300w.jpg"
                         srcset="
@@ -110,7 +110,7 @@
                         </figure>
                     </li>
                     <li>
-                        <figure>
+                        <figure class="gallery-card">
                       <img 
                         src="images/basket-300w.jpg"
                         srcset="
@@ -126,21 +126,20 @@
                   <p>View Our Full Gallery</p>
             </section>
 
-            <section id="contact">
-                <address>
-                    123 Estate Lane, Wine Country, CA
-                    (555) 123-4567
-                    hello@fieldandfeast.com
-                </address>
-
-                <p>
-                    <a href="#">Instagram</a><br />
-                    <a href="#">Facebook</a>
-                </p>
-            </section>
+            
         </main>
 
         <footer>
+            <address>
+                123 Estate Lane, Wine Country, CA
+                (555) 123-4567
+                hello@fieldandfeast.com
+            </address>
+
+            <p>
+                <a href="#">Instagram</a><br />
+                <a href="#">Facebook</a>
+            </p>
             <p>&copy; 2025 Field & Feast</p>
         </footer>
 </body>
