--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <h2>A Gallery of Field & Feast</h2>
                 <p>Experience the elegance and artistry behind Field & Feast through our curated collection of images. From lush fields and handcrafted ingredients to beautifully plated farm-to-table creations, each photo tells the story of our commitment to excellence.</p>
 
+                <div class="gallery-container">
                 <ul>
                     <li>
                         <figure class="gallery-card">
@@ -124,6 +125,7 @@
                     </li>
                   </ul>
                   <p>View Our Full Gallery</p>
+                </div>
             </section>
 
             
@@ -131,7 +133,7 @@
 
         <footer>
             <address>
-                123 Estate Lane, Wine Country, CA
+                123 Estate Lane, Wine Country, CA<br />
                 (555) 123-4567
                 hello@fieldandfeast.com
             </address>
