--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <section id="offerings">
                 <h2>Our Offerings</h2>
 
-
+<div class="offering-container">
                 <div class="offering-card">
                 <h3>Artisan Provisions</h3>
                 <p>Hand-selected, seasonal ingredients sourced from our estate farm and trusted local growers. Each item is chosen for its freshness, flavor, and integrity.</p>
@@ -52,6 +52,7 @@
                     <li>Exclusive Recipes & Pairings: Thoughtfully designed by our chefs to inspire culinary creativity.</li>
                 </ul>
                 <p>Elevate your home dining with the finest farm-to-table offerings, elegantly packaged and delivered with care.</p>
+                </div>
                 </div>
             </section>
 
